<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    tools:context=".ui.listRestaurant.RestaurantFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lilac_light"
                android:minHeight="?attr/actionBarSize"
                app:title="@string/app_name"
                app:titleCentered="true"
                app:titleTextColor="?attr/colorOnPrimary" />

        </com.google.android.material.appbar.AppBarLayout>


        <Button
            android:id="@+id/btSort"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_16"
            android:layout_marginTop="@dimen/space_16"
            android:layout_marginBottom="@dimen/space_8"
            android:text="@string/default_sort"
            android:textSize="@dimen/font_14"
            app:icon="@drawable/ic_sort_bt" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listRestaurant"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/space_8" />

    </LinearLayout>


    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:indeterminate="true"
        android:progress="45"
        android:visibility="gone"
        app:indicatorColor="@color/lilac_light" />


    <LinearLayout
        android:id="@+id/errorMassage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/loading_error_try_again_later"
            android:textSize="@dimen/font_22" />

        <Button
            android:id="@+id/refreshBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_8"
            android:text="@string/refresh" />

    </LinearLayout>


    <View
        android:id="@+id/dim_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/bottom_sheet_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/shape_bottom_sheet"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="@dimen/space_4"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginBottom="@dimen/space_12"
            android:background="@drawable/rectangle_bottom_sheep" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_16"
            android:layout_marginEnd="@dimen/space_16"
            android:layout_marginBottom="@dimen/space_16"
            android:text="@string/select_sort_type"
            android:textSize="@dimen/font_22"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_group_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_16"
            android:layout_marginEnd="@dimen/space_16">

            <RadioButton
                android:id="@+id/defaultRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_sort" />

            <RadioButton
                android:id="@+id/closerRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/closer_center" />

            <RadioButton
                android:id="@+id/furtherRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/further_center" />

            <RadioButton
                android:id="@+id/lotRoomsRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/many_free_tables" />

            <RadioButton
                android:id="@+id/fewRoomsRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/few_free_tables" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_24"
            android:text="@string/apply" />

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>